y.output

state 0
	$accept: .parse_toplevel $end 
	stmt: .    (5)

	.  reduce 5 (src line 197)

	parse_toplevel  goto 1
	stmtmulti  goto 2
	toplevel_stmt  goto 3
	stmt  goto 4

state 1
	$accept:  parse_toplevel.$end 

	$end  accept
	.  error


state 2
	parse_toplevel:  stmtmulti.    (1)
	stmtmulti:  stmtmulti.';' toplevel_stmt 

	';'  shift 5
	.  reduce 1 (src line 147)


state 3
	stmtmulti:  toplevel_stmt.    (3)

	.  reduce 3 (src line 171)


state 4
	toplevel_stmt:  stmt.    (4)

	.  reduce 4 (src line 185)


state 5
	stmtmulti:  stmtmulti ';'.toplevel_stmt 
	stmt: .    (5)

	.  reduce 5 (src line 197)

	toplevel_stmt  goto 6
	stmt  goto 4

state 6
	stmtmulti:  stmtmulti ';' toplevel_stmt.    (2)

	.  reduce 2 (src line 162)

Rule not reduced: opt_single_name:  ColId 
Rule not reduced: opt_single_name:  
Rule not reduced: opt_qualified_name:  qualified_name 
Rule not reduced: opt_qualified_name:  
Rule not reduced: opt_drop_behavior:  CASCADE 
Rule not reduced: opt_drop_behavior:  RESTRICT 
Rule not reduced: opt_drop_behavior:  
Rule not reduced: opt_if_exists:  IF_P EXISTS 
Rule not reduced: opt_if_exists:  
Rule not reduced: opt_if_not_exists:  IF_P NOT EXISTS 
Rule not reduced: opt_if_not_exists:  
Rule not reduced: opt_or_replace:  OR REPLACE 
Rule not reduced: opt_or_replace:  
Rule not reduced: opt_concurrently:  CONCURRENTLY 
Rule not reduced: opt_concurrently:  
Rule not reduced: opt_with:  WITH IDENT 
Rule not reduced: opt_with:  
Rule not reduced: OptWith:  WITH 
Rule not reduced: OptWith:  WITH_LA 
Rule not reduced: OptWith:  WITHOUT_LA 
Rule not reduced: OptWith:  
Rule not reduced: ColId:  IDENT 
Rule not reduced: ColId:  unreserved_keyword 
Rule not reduced: ColId:  col_name_keyword 
Rule not reduced: ColLabel:  IDENT 
Rule not reduced: ColLabel:  unreserved_keyword 
Rule not reduced: ColLabel:  col_name_keyword 
Rule not reduced: ColLabel:  type_func_name_keyword 
Rule not reduced: ColLabel:  reserved_keyword 
Rule not reduced: name:  ColId 
Rule not reduced: name_list:  name 
Rule not reduced: name_list:  name_list ',' name 
Rule not reduced: qualified_name:  ColId 
Rule not reduced: qualified_name:  ColId '.' ColId 
Rule not reduced: qualified_name_list:  qualified_name 
Rule not reduced: qualified_name_list:  qualified_name_list ',' qualified_name 
Rule not reduced: any_name:  ColId 
Rule not reduced: any_name:  ColId '.' ColId 
Rule not reduced: any_name_list:  any_name 
Rule not reduced: any_name_list:  any_name_list ',' any_name 
Rule not reduced: unreserved_keyword:  ALL 
Rule not reduced: col_name_keyword:  IDENT 
Rule not reduced: type_func_name_keyword:  IDENT 
Rule not reduced: reserved_keyword:  CREATE 
Rule not reduced: reserved_keyword:  DROP 
Rule not reduced: reserved_keyword:  ALTER 
Rule not reduced: a_expr:  c_expr 
Rule not reduced: a_expr:  '+' a_expr 
Rule not reduced: a_expr:  '-' a_expr 
Rule not reduced: a_expr:  a_expr TYPECAST Typename 
Rule not reduced: a_expr:  a_expr '+' a_expr 
Rule not reduced: a_expr:  a_expr '-' a_expr 
Rule not reduced: a_expr:  a_expr '*' a_expr 
Rule not reduced: a_expr:  a_expr '/' a_expr 
Rule not reduced: a_expr:  a_expr '%' a_expr 
Rule not reduced: a_expr:  a_expr '^' a_expr 
Rule not reduced: a_expr:  a_expr '<' a_expr 
Rule not reduced: a_expr:  a_expr '>' a_expr 
Rule not reduced: a_expr:  a_expr '=' a_expr 
Rule not reduced: a_expr:  a_expr LESS_EQUALS a_expr 
Rule not reduced: a_expr:  a_expr GREATER_EQUALS a_expr 
Rule not reduced: a_expr:  a_expr NOT_EQUALS a_expr 
Rule not reduced: a_expr:  a_expr AND a_expr 
Rule not reduced: a_expr:  a_expr OR a_expr 
Rule not reduced: a_expr:  NOT a_expr 
Rule not reduced: a_expr:  a_expr IS NULL_P 
Rule not reduced: a_expr:  a_expr ISNULL 
Rule not reduced: a_expr:  a_expr IS NOT NULL_P 
Rule not reduced: a_expr:  a_expr NOTNULL 
Rule not reduced: a_expr:  a_expr LIKE a_expr 
Rule not reduced: a_expr:  a_expr LIKE a_expr ESCAPE a_expr 
Rule not reduced: a_expr:  a_expr NOT_LA LIKE a_expr 
Rule not reduced: a_expr:  a_expr NOT_LA LIKE a_expr ESCAPE a_expr 
Rule not reduced: a_expr:  a_expr ILIKE a_expr 
Rule not reduced: a_expr:  a_expr ILIKE a_expr ESCAPE a_expr 
Rule not reduced: a_expr:  a_expr NOT_LA ILIKE a_expr 
Rule not reduced: a_expr:  a_expr NOT_LA ILIKE a_expr ESCAPE a_expr 
Rule not reduced: a_expr:  a_expr COLLATE any_name 
Rule not reduced: a_expr:  a_expr AT TIME ZONE a_expr 
Rule not reduced: a_expr:  a_expr AT LOCAL 
Rule not reduced: a_expr:  a_expr qual_Op a_expr 
Rule not reduced: a_expr:  qual_Op a_expr 
Rule not reduced: a_expr:  a_expr BETWEEN opt_asymmetric b_expr AND a_expr 
Rule not reduced: a_expr:  a_expr NOT_LA BETWEEN opt_asymmetric b_expr AND a_expr 
Rule not reduced: a_expr:  a_expr BETWEEN SYMMETRIC b_expr AND a_expr 
Rule not reduced: a_expr:  a_expr NOT_LA BETWEEN SYMMETRIC b_expr AND a_expr 
Rule not reduced: a_expr:  a_expr IN_P in_expr 
Rule not reduced: a_expr:  a_expr NOT_LA IN_P in_expr 
Rule not reduced: a_expr:  a_expr SIMILAR TO a_expr 
Rule not reduced: a_expr:  a_expr SIMILAR TO a_expr ESCAPE a_expr 
Rule not reduced: a_expr:  a_expr NOT_LA SIMILAR TO a_expr 
Rule not reduced: a_expr:  a_expr NOT_LA SIMILAR TO a_expr ESCAPE a_expr 
Rule not reduced: b_expr:  c_expr 
Rule not reduced: b_expr:  b_expr TYPECAST Typename 
Rule not reduced: b_expr:  '+' b_expr 
Rule not reduced: b_expr:  '-' b_expr 
Rule not reduced: b_expr:  b_expr '+' b_expr 
Rule not reduced: b_expr:  b_expr '-' b_expr 
Rule not reduced: b_expr:  b_expr '*' b_expr 
Rule not reduced: b_expr:  b_expr '/' b_expr 
Rule not reduced: b_expr:  b_expr '%' b_expr 
Rule not reduced: b_expr:  b_expr '^' b_expr 
Rule not reduced: b_expr:  b_expr '<' b_expr 
Rule not reduced: b_expr:  b_expr '>' b_expr 
Rule not reduced: b_expr:  b_expr '=' b_expr 
Rule not reduced: b_expr:  b_expr LESS_EQUALS b_expr 
Rule not reduced: b_expr:  b_expr GREATER_EQUALS b_expr 
Rule not reduced: b_expr:  b_expr NOT_EQUALS b_expr 
Rule not reduced: c_expr:  columnref 
Rule not reduced: c_expr:  AexprConst 
Rule not reduced: c_expr:  PARAM opt_indirection 
Rule not reduced: c_expr:  '(' a_expr ')' opt_indirection 
Rule not reduced: c_expr:  func_expr 
Rule not reduced: AexprConst:  Iconst 
Rule not reduced: AexprConst:  FCONST 
Rule not reduced: AexprConst:  Sconst 
Rule not reduced: AexprConst:  TRUE_P 
Rule not reduced: AexprConst:  FALSE_P 
Rule not reduced: AexprConst:  NULL_P 
Rule not reduced: Iconst:  ICONST 
Rule not reduced: Sconst:  SCONST 
Rule not reduced: SignedIconst:  Iconst 
Rule not reduced: SignedIconst:  '+' Iconst 
Rule not reduced: SignedIconst:  '-' Iconst 
Rule not reduced: columnref:  ColId 
Rule not reduced: columnref:  ColId indirection 
Rule not reduced: indirection:  indirection_el 
Rule not reduced: indirection:  indirection indirection_el 
Rule not reduced: indirection_el:  '.' ColId 
Rule not reduced: indirection_el:  '[' a_expr ']' 
Rule not reduced: indirection_el:  '[' a_expr ':' a_expr ']' 
Rule not reduced: opt_indirection:  
Rule not reduced: opt_indirection:  opt_indirection indirection_el 
Rule not reduced: func_expr:  func_name '(' ')' 
Rule not reduced: func_expr:  func_name '(' func_arg_list ')' 
Rule not reduced: func_name:  ColId 
Rule not reduced: func_name:  qualified_name 
Rule not reduced: func_arg_list:  func_arg_expr 
Rule not reduced: func_arg_expr:  a_expr 
Rule not reduced: func_arg_expr:  func_arg_expr ',' a_expr 
Rule not reduced: expr_list:  a_expr 
Rule not reduced: expr_list:  expr_list ',' a_expr 
Rule not reduced: Typename:  SimpleTypename 
Rule not reduced: SimpleTypename:  GenericType 
Rule not reduced: SimpleTypename:  Numeric 
Rule not reduced: SimpleTypename:  Bit 
Rule not reduced: SimpleTypename:  Character 
Rule not reduced: SimpleTypename:  ConstDatetime 
Rule not reduced: GenericType:  ColId 
Rule not reduced: GenericType:  qualified_name 
Rule not reduced: Numeric:  NUMERIC 
Rule not reduced: Bit:  BIT 
Rule not reduced: Character:  IDENT 
Rule not reduced: ConstDatetime:  IDENT 
Rule not reduced: qual_Op:  Op 
Rule not reduced: qual_Op:  '+' 
Rule not reduced: qual_Op:  '-' 
Rule not reduced: qual_Op:  '*' 
Rule not reduced: qual_Op:  '/' 
Rule not reduced: qual_Op:  '%' 
Rule not reduced: qual_Op:  '^' 
Rule not reduced: qual_Op:  '<' 
Rule not reduced: qual_Op:  '>' 
Rule not reduced: qual_Op:  '=' 
Rule not reduced: qual_Op:  LESS_EQUALS 
Rule not reduced: qual_Op:  GREATER_EQUALS 
Rule not reduced: qual_Op:  NOT_EQUALS 
Rule not reduced: all_Op:  qual_Op 
Rule not reduced: MathOp:  '+' 
Rule not reduced: MathOp:  '-' 
Rule not reduced: MathOp:  '*' 
Rule not reduced: MathOp:  '/' 
Rule not reduced: MathOp:  '%' 
Rule not reduced: MathOp:  '^' 
Rule not reduced: any_operator:  all_Op 
Rule not reduced: opt_asymmetric:  
Rule not reduced: opt_asymmetric:  ASYMMETRIC 
Rule not reduced: in_expr:  '(' expr_list ')' 

96 terminals, 55 nonterminals
184 grammar rules, 7/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
104 working sets used
memory: parser 5/240000
0 extra closures
1 shift entries, 1 exceptions
55 goto entries
-49 entries saved by goto default
Optimizer space used: output 8/240000
8 table entries, 2 zero
maximum spread: 89, maximum offset: 89
